--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
   "buildCommand": "vite build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "rewrites": [
+    { "source": "/", "destination": "/home" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
